--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "lemon's blog"
+name: "PoetryH's Blog."
 # Short bio or description (displayed in the header)
 description: "个人技术公众号：程序员柠檬  分享编程资源 | 学习路线"
 
