--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ description: "Poetry's personal blog where you can find everything about me."
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/hominggg/hominggg.github.io/blob/master/MDJU%7D8WZ%24U64U_IU%7B97B%7DOO.png
+# 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
+favicon: https://github.com/hominggg/hominggg.github.io/blob/master/MDJU%7D8WZ%24U64U_IU%7B97B%7DOO.png
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
