--- a/_config.yml
+++ b/_config.yml
@@ -39,11 +39,11 @@ footer-links:
   #weibo: frommidworld #请输入你的微博个性域名 https://www.weibo.com/<thispart>
   behance: # https://www.behance.net/<username>
   dribbble:
-  zhihu: ning-meng-cheng-31-94
-  email: llong87@163.com
+
+  email: 2660996043@qq.com
   facebook:
   flickr:
-  github: lemonchann 
+  github: hominggg
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
@@ -51,8 +51,8 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
-  #twitter: frommidworld
-  youtube:
+  twitter: PoetryVRC
+  youtube:H Poetry
 
 # Text under the icons in footer
 footer-text: Copyright (c) 2019 lemon
