--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ footer-links:
   youtube:H Poetry
 
 # Text under the icons in footer
-footer-text: Copyright (c) 2019 lemon
-
+footer-text: Copyright (c) 2019 lemon 
+footer-text: Quote Template PoetryH
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: # fromendworld
