--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,8 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
   twitter: Poetry_VRC
-  #youtube:H Poetry
+  VRChat: usr_03c7cc46-118d-4ec8-8c69-ea9cfdd1f548
+  youtube: H Poetry
 
 # Text under the icons in footer
 footer-text: Copyright (c) 2019 lemon <br> Quote Template PoetryH
