--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ footer-links:
   tumblr: # https://<username>.tumblr.com
   twitter: Poetry_VRC
   VRChat: usr_03c7cc46-118d-4ec8-8c69-ea9cfdd1f548
-  youtube: H Poetry
+  youtube: channel/UCnos4jjTR0pX69OC-m5YB1A
 
 # Text under the icons in footer
 footer-text: Copyright (c) 2019 lemon <br> Quote Template PoetryH
