--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
   twitter: Poetry_VRC
-  VRChat: usr_03c7cc46-118d-4ec8-8c69-ea9cfdd1f548
+  vrchat: usr_03c7cc46-118d-4ec8-8c69-ea9cfdd1f548
   youtube: channel/UCnos4jjTR0pX69OC-m5YB1A
 
 # Text under the icons in footer
