--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,10 @@ disqus: # fromendworld
 
 # Gitalk
 gitalk:
-  clientID: bd65d5c0df878155b7fa
-  clientSecret: d0220762c05c2d6b6f6152a0f0e4b6b090de9729
-  repo: lemonchann.github.io
-  owner: lemonchann
+  clientID: d05aeba52ec3c8056b9d
+  clientSecret: 489e6df966b8f123633f9fb52781ed6cf35d1ba9
+  repo: hominggg.github.io
+  owner: hominggg
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 #google_analytics: 
