--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ gitalk:
   owner: hominggg
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-#google_analytics: 
+google_analytics: G-4QMFS07ZT8
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
