--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
 
-  email: @qq.com
+  email: 3@qq.com
   facebook:
   flickr:
   github: hominggg
